# Full-Time-Equivalent

./: .dockerignore  .gitignore  .mcp.json  .secrets.baseline  CHANGELOG.md  CLAUDE.md  Dockerfile  GCP_DEPLOYMENT_SUCCESS.md  HACKATHON_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  MVP_VERIFIED.md  PROJECT_STATUS.md  README.md  SECURITY.md  SUBMISSION.md  WORKFLOW.md  docker-compose.yml  hello_world.py  pyproject.toml  pytest.ini  requirements.txt
.claude/agents/: README.md
.claude/mcp/: INSTALLATION_SUMMARY.md  README.md
.fte/: cli.checkpoint.json  tdd_state.json
.fte/watchers/: gmail.checkpoint.json  whatsapp.checkpoint.json
.github/workflows/: ci.yml  detect-secrets.yml
.specify/memory/: constitution.md
.specify/templates/: skill-schema.yaml  skill-template.md
.vault_schema/: naming_conventions.md  state_transitions.md
.vault_schema/frontmatter_schemas/: approval.yaml  briefing.yaml  task.yaml
.vault_schema/validation_scripts/: validate_filename.py  validate_state.py  validate_vault.py
.vault_templates/: .gitignore  Company_Handbook.md  Dashboard.md  README.md
.vault_templates/.obsidian/: app.json  appearance.json  core-plugins.json
.vault_templates/Templates/: approval_template.md  naming_examples.md  task_template.md
Logs/archive/: .gitkeep
Logs/metrics/: .gitkeep
Plans/: 02-logging-infrastructure.md  03-mcp-integration.md  04-persistence-loop.md
config/: briefing.yaml  cli.yaml  logging.yaml  mcp_servers.yaml  orchestrator.yaml  persistence.yaml  pii-patterns.yaml  security.yaml
config/watchers/: base.yaml  filesystem.yaml  gmail.yaml  whatsapp.yaml
deployment/: README.md
deployment/cloud/: CLOUD_DEPLOYMENT.md  deploy-aws.sh  deploy-digitalocean.sh  deploy-gcp.sh
deployment/cron/: crontab.example
deployment/systemd/: fte-briefing.service  fte-briefing.timer  fte-filesystem-watcher.service  fte-gmail-watcher.service  fte-health-check.service  fte-health-check.timer  fte-orchestrator.service
deployment/windows/: Task-Scheduler-Setup.md
docs/: GETTING_STARTED.md  ORCHESTRATOR_DEPLOYMENT.md  ORCHESTRATOR_TROUBLESHOOTING.md  USER_MANUAL.md  VAULT_CLI.md  VAULT_MIGRATION.md  VAULT_STRUCTURE.md  VAULT_TROUBLESHOOTING.md  VAULT_VALIDATION.md
docs/cli/: developer-guide.md  user-guide.md
docs/security/: AUDIT_CHECKLIST.md  CLI_REFERENCE.md  PENETRATION_TESTING.md  SECURITY_POLICY.md  incident-playbooks.md
docs/skills/: best-practices.md  constitutional-compliance.md  core-skills-index.md  naming-conventions.md  skill-anatomy.md  skill-creation-guide.md  skill-registry.md
scripts/: gmail_watcher_sim.py  init_skill.py  package_skill.py  run_orchestrator.py  run_watcher.py  simple_filesystem_watcher.py  task_processor_agent.py  update_secrets_baseline.py  update_secrets_baseline.sh  validate_skill.py
scripts/completion/: fte-completion.bash  fte-completion.zsh
specs/001-file-control-plane/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/002-logging-infrastructure/: API.md  data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-cli-integration-roadmap/: plan.md  spec.md  tasks.md
specs/004-mcp-threat-model/: plan.md  spec.md  tasks.md
specs/005-watcher-scripts/: plan.md  spec.md  tasks.md
specs/006-orchestrator-scheduler/: plan.md  spec.md  tasks.md
specs/007-ceo-briefing/: plan.md  spec.md  tasks.md
specs/008-obsidian-vault-structure/: plan.md  spec.md  tasks.md
specs/009-agent-skills-guide/: plan.md  spec.md  tasks.md
specs/010-hitl-approval-workflows/: plan.md  spec.md  tasks.md
src/approval/: __init__.py  approval_manager.py  audit_logger.py  audit_query.py  integrity_checker.py  models.py  nonce_generator.py
src/briefing/: __init__.py  aggregator.py  email_delivery.py  models.py  pdf_generator.py  template_renderer.py
src/cli/: __init__.py  approval.py  briefing.py  checkpoint.py  config.py  errors.py  init.py  logging_setup.py  logs.py  main.py  mcp.py  orchestrator.py  security.py  skill.py  status.py  tdd.py  tdd_helpers.py  tdd_state.py  telemetry.py  utils.py  vault.py  watcher.py
src/control_plane/: __init__.py  errors.py  logger.py  models.py  state_machine.py
src/dashboard/: app.py
src/fte_logging/: __init__.py  async_writer.py  config.py  duckdb_adapter.py  logger_service.py  models.py  query_service.py
src/logging/: async_writer.py  config.py  duckdb_adapter.py  logger_service.py  models.py  query_service.py  redaction.py  (+1 more)
templates/: skill-template.md
tests/: __init__.py  conftest.py
(+285 files in other folders)
